模板编译替换

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,10 @@
     <title>Title</title>
 </head>
 <body>
-    <div id="app"></div>
+    <div id="app">
+        {{dddd}}
+        <div>{{dddd}}</div>
+        <span>这个是idv{{xsdfefe}}</span>
+    </div>
 </body>
 </html>
